# wip-rust-game-engine

./: Cargo.toml  readme.md
src/: application.rs  javascript.rs  lib.rs  tests.rs  timer.rs
src/engine/: components.rs  core.rs  entities.rs  input.rs  mod.rs  resources.rs  systems.rs
src/engine/components/: angular_velocity.rs  camera.rs  mod.rs  transform.rs  velocity.rs
src/engine/mesh_manager/: mesh.rs  mesh_exploder.rs  mesh_loader.rs  mesh_storage.rs  mod.rs
src/game/: mod.rs
src/glm/: mat3.rs  mat4.rs  mod.rs  quat.rs  vec3.rs  vec4.rs
src/math/: glm.rs  mod.rs
src/renderer/: mod.rs  shader.rs
src/renderer/glsl/: basic_fragment.glsl  basic_vertex.glsl  common_functions.glsl  light_source_fragment.glsl  light_source_vertex.glsl
tests/: lib.rs
tests/engine/: mod.rs
tests/engine/glm/: mod.rs  quat.rs
