[package]
name = "goblin"
version = "0.1.0"
authors = ["team goblin"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.5"
wasm-bindgen = "0.2.29"
console_error_panic_hook = "0.1.5"
specs = "0.14.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'Window',
  'Performance',
]
