[package]
name = "goblin"
version = "0.1.0"
authors = ["team goblin"]

[dependencies]
js-sys = "0.3.24"
wasm-bindgen = "0.2.47"
console_error_panic_hook = "0.1.6"
specs = "0.14.0"

[dependencies.web-sys]
version = "0.3.24"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'Window',
  'Performance',
]
